--- a/config.yaml
+++ b/config.yaml
@@ -126,7 +126,7 @@ params:
       enable: true
     # roundImage: true # Make hero image circular | default false
     button:
-      enable: true
+      enable: false
       name: "Resume"
       url: "#"
       download: true
