--- a/config.yaml
+++ b/config.yaml
@@ -151,7 +151,7 @@ params:
     title: "About Me"
     image: "/images/20211229_164748.jpg"
     content: |-
-      I work as a senior applications engineer at [Infineon Technologies](https://www.infineon.com/).  I have a background in Electronics, Communication and VLSI, and I have a strong interest in building applications and VLSI designs.
+      I work as a Customer Applications Engineer(CAE) at [Infineon Technologies](https://www.infineon.com/).  I have a background in Electronics, Communication and VLSI, and I have a strong interest in building applications and VLSI designs.
 
       I am currently working on Infineon's [Wi-Fi Products](https://www.infineon.com/cms/en/product/wireless-connectivity/airoc-wi-fi-plus-bluetooth-combos/) and specialise in supporting customers with their hardware, regulatory, and firmware issues. I do occasionally support customers on embedded systems too.
     skills:
@@ -167,68 +167,72 @@ params:
 
   # Experience
   experience:
-    enable: false
+    enable: true
     # title: "Custom Name"
     items:
-      - job: "Senior Software Developer"
-        company: "Facebook"
-        companyUrl: "https://example.com"
-        date: "Jan 2022 - present"
+      - job: "Senior Applications Engineer"
+        company: "Infineon technologies"
+        companyUrl: "https://www.infineon.com/"
+        date: "April 2022 - present"
         featuredLink:
           enable: true
-          name: "View the project"
-          url: "https://example.com"
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
-
-      - job: "Software Developer"
-        company: "Amazon"
-        companyUrl: "https://example.com"
-        date: "Sep 2020 - Dec 2021"
-        featuredLink:
-          enable: true
-          url: "https://example.com"
+          name: "Community Training"
+          url: "https://community.infineon.com/t5/Resource-Library/Introduction-to-Infineon-s-WiFi-Regulatory-flow/ta-p/277083"
         info:
           enable: true
-          content: I worked as a software developer for more than one year in Amazon.
+          content: Been part of Infineon since it acquired Cypress Semiconductor in April 2020.
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+          - I am responsible for helping customers get their wifi radios ready before they go into regulatory testing.
+          - I also do schematic reviews and help customers with a few hardware queries.
+          - I am based out [Bengaluru,Karnataka, India](https://bengaluruurban.nic.in/en/).
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
-
-      - job: "Junior Software Developer"
-        company: "Apple"
-        companyUrl: "https://example.com"
-        date: "Jan 2020 - Aug 2020"
+      - job: "Applications Engineer"
+        company: "Cypress Semiconductor"
+        companyUrl: "https://www.infineon.com/"
+        date: "June 2019 - March 2022"
+        featuredLink:
+          enable: true
+          name: "Community Training"
+          url: "https://www.youtube.com/watch?v=KrfezF2BD70&t=2s"
         info:
+          enable: true
+          content: Cypress Semiconductor was acquired by Infineon in April 2020.
+        content: |
+          - I extensively worked on the company's embedded Wi-Fi portfolio and I worked on WICED and ModusToolBox when I was exposed to a few technologies like ThreadX, FreeRTOS, LwIP, NetX, Makefiles.
+          - I also worked on developing projects showcasing Infineon's products and developed a few Code Examples.
+          - I also worked on automating Infineon's regulatory flow which reduced the turn around time from a few weeks to a few hours. 
+
+      - job: "Co-Op Bachelors"
+        company: "Cypress Semiconductor"
+        companyUrl: "https://www.infineon.com/"
+        date: "Jan 2019 - May 2019"
+        info:
+          enable: true
+          content : Six month intership program
+        featuredLink:
           enable: false
-        featuredLink:
-          enable: true
           url: "https://example.com"
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+          I learnt some basics about Bluetooth and I learnt a few Bluetooth protocols.
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+      # - job: "UI/UX Designer"
+      #   company: "Netflix"
+      #   companyUrl: "https://example.com"
+      #   date: "June 2017 - Nov 2019"
+      #   featuredLink:
+      #     enable: true
+      #     url: "https://example.com"
+      #   content: |
+      #     I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
 
-      - job: "UI/UX Designer"
-        company: "Netflix"
-        companyUrl: "https://example.com"
-        date: "June 2017 - Nov 2019"
-        featuredLink:
-          enable: true
-          url: "https://example.com"
-        content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+      #     - Lead backend developer for a product.
+      #     - Created a frontend design for a product.
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
-
-      - job: "Product Designer"
-        company: "Google"
-        companyUrl: "https://example.com"
-        date: "Feb 2016 - Mar 2017"
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
+      # - job: "Product Designer"
+      #   company: "Google"
+      #   companyUrl: "https://example.com"
+      #   date: "Feb 2016 - Mar 2017"
+      #   content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
 
   # Education
   education:
@@ -305,23 +309,24 @@ params:
     enable: true
     # title: "Custom Name"
     items:
-      - title: Google kickstart runner
-        content: I solved all problems with optimal solution.
-        url: https://example.com
-      - title: Facebook Hackathon Winner
-        content: Developed a product using Artificial Intelligence.
-      - title: Hugo Profile
-        content: Developed a theme and getting 1K+ downloads per month.
-        url: "https://github.com/gurusabarish/hugo-profile"
-      - title: Microsoft Imagine Runner
-        content: We are developed a product which can help others.
-      - title: Google Summer of Code
-        content: Contributed to a open source project.
-        url: https://example.com
+      - title: Spot Award
+        content: This was awarded to me by Infineon in recognition of the excellent work done in Wi-Fi regulatory, CLM automation, premium customer support across Wi-Fi embedded, firmware and hardware. 
+        # url: https://example.com
+      - title: iHack 2020
+        content: I was part of a team that won a third place in the blockchain track organised by Infineon as part of iHack 2020.
+      - title: Academic excellence awards
+        content: I have been awarded many academic excellence awards for securing top ranks throughout my education.
+        # url: "https://github.com/gurusabarish/hugo-profile"
+      - title: Sports
+        content: I have secured many medals in swimming at the district level and even in Throwball. I still do swim whenever possible and this is a passion that still burns bright in me :)
+
+      # - title: Google Summer of Code
+      #   content: Contributed to a open source project.
+      #   url: https://example.com
 
   # projects
   projects:
-    enable: true
+    enable: false
     # title: "Custom Name"
     items:
       - title: Hugo Profile
@@ -373,14 +378,14 @@ params:
   contact:
     enable: true
     # title: "Custom Name"
-    content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
-    email: gurusabarisha@gmail.com
+    content: My inbox is always open. Whether you have a question or just want to say Namaskaara, please reach out and I will respond.
+    email: miru@mirutech.dev
     btnName: Mail me
-    # formspree:
-    #   enable: true # `contact.email` value will be ignored
-    #   formId: abcdefgh # Take it from your form's endpoint, like 'https://formspree.io/f/abcdefgh'
-    #   emailCaption: "Enter your email address"
-    #   messageCaption: "Enter your message here"
+    formspree:
+      enable: false # `contact.email` value will be ignored
+      formId: https://forms.office.com/pages/ # Take it from your form's endpoint, like 'https://formspree.io/f/abcdefgh'
+      emailCaption: "Enter your email address"
+      messageCaption: "Enter your message here"
 
   footer:
     recentPosts:
@@ -389,12 +394,12 @@ params:
       title: Recent Posts
       enable: true
       disableFeaturedImage: false
-    socialNetworks:
-      github: https://github.com
-      linkedin: https://linkedin.com
-      twitter: https://twitter.com
-      instagram: https://instagram.com
-      facebook: https://facebook.com
+    # socialNetworks:
+    #   github: https://github.com
+    #   linkedin: https://linkedin.com
+    #   twitter: https://twitter.com
+    #   instagram: https://instagram.com
+    #   facebook: https://facebook.com
 
   # List pages like blogs and posts
   listPages:
