--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ outputs:
 
 Paginate: 3
 enableRobotsTXT: true
-disqusShortname: miru-disqus
+disqusShortname: mirutech-dev
 # googleAnalytics: G-MEASUREMENT_ID
 
 markup:
@@ -126,10 +126,10 @@ params:
       enable: true
     # roundImage: true # Make hero image circular | default false
     button:
-      enable: false
+      enable: true
       name: "Resume"
       url: "https://resume.mirutech.dev/"
-      download: false
+      download: true
       newPage: true
     socialLinks:
       fontAwesomeIcons:
@@ -236,7 +236,7 @@ params:
 
   # Education
   education:
-    enable: false
+    enable: true
     # title: "Custom Name"
     index: false
     items:
@@ -306,7 +306,7 @@ params:
 
   # Achievements
   achievements:
-    enable: false
+    enable: true
     # title: "Custom Name"
     items:
       - title: Spot Award
@@ -376,7 +376,7 @@ params:
 
   #Contact
   contact:
-    enable: false
+    enable: true
     # title: "Custom Name"
     content: My inbox is always open. Whether you have a question or just want to say Namaskaara, please reach out and I will respond.
     email: miru@mirutech.dev
@@ -389,7 +389,7 @@ params:
 
   footer:
     recentPosts:
-      path: "blogs"
+      path: "posts"
       count: 3
       title: Recent Posts
       enable: true
