--- a/config.yaml
+++ b/config.yaml
@@ -152,11 +152,11 @@ params:
     title: "About Me"
     image: "/images/20211229_164748.jpg"
     content: |-
-      I work as a Customer Applications Engineer(CAE) at [Infineon Technologies](https://www.infineon.com/).  I have a background in Electronics, Communication and VLSI, and I have a strong interest in building applications and VLSI designs.
+      I currently work as an Analog Design Engineer at [Onsemi](https://www.onsemi.com/). I have a background in Electronics, Communication and VLSI, and I have a strong interest in building applications and new circuits to achieve the same.
 
-      I am currently working on Infineon's [Wi-Fi Products](https://www.infineon.com/cms/en/product/wireless-connectivity/airoc-wi-fi-plus-bluetooth-combos/) and specialize in supporting customers with their hardware, regulatory, and firmware issues. I do occasionally support customers on embedded systems too.
+      
     skills:
-      enable: true
+      enable: false
       title: "Here are a few technologies I've been working with recently as part of my job:"
       items:
         - "Wi-Fi regulatory standards and compliance until Wi-Fi 6/6E"
@@ -171,50 +171,41 @@ params:
     enable: true
     # title: "Custom Name"
     items:
-      - job: "Senior Applications Engineer"
-        company: "Infineon Technologies"
-        companyUrl: "https://www.infineon.com/"
-        date: "April 2022 - present"
+      - job: "Analog Design Engineer"
+        company: "Onsemi"
+        companyUrl: "https://www.onsemi.com/"
+        date: "February 2024 - Present"
         featuredLink:
-          enable: true
+          enable: false
           name: "Community Training"
           url: "https://community.infineon.com/t5/Resource-Library/Introduction-to-Infineon-s-WiFi-Regulatory-flow/ta-p/277083"
         info:
           enable: true
-          content: Been part of Infineon since it acquired Cypress Semiconductor in April 2020.
+          content: I switched to this role post my master's.
         content: |
-          - I am responsible for helping customers get their wifi radios ready before they go into regulatory testing.
-          - I also do schematic reviews and help customers with a few hardware queries.
+          - I am presently working on understanding Multi-Phase Converters.
           - I am based out [Bengaluru, Karnataka, India](https://bengaluruurban.nic.in/en/).
-
+      
       - job: "Applications Engineer"
-        company: "Cypress Semiconductor"
+        company: "Infineon Technologies"
         companyUrl: "https://www.infineon.com/"
-        date: "June 2019 - March 2022"
+        date: "January 2019 - February 2024"
         featuredLink:
-          enable: true
-          name: "Community Training"
+          enable: false
+          name: "Community Training 1"
+          url: "https://community.infineon.com/t5/Resource-Library/Introduction-to-Infineon-s-WiFi-Regulatory-flow/ta-p/277083"
+          name: "Community Training 2"
           url: "https://www.youtube.com/watch?v=KrfezF2BD70&t=2s"
         info:
           enable: true
-          content: Cypress Semiconductor was acquired by Infineon in April 2020.
+          content: I became a part of Infineon since it acquired Cypress Semiconductor in April 2020.
         content: |
+          - I was responsible for helping customers get their wifi radios ready before they go into regulatory testing.
+          - I also did schematic reviews and helped customers with a few hardware queries.
           - I extensively worked on the company's embedded Wi-Fi portfolio and I worked on WICED and ModusToolBox when I was exposed to a few technologies like ThreadX, FreeRTOS, LwIP, NetX, and Makefiles.
-          - I also worked on developing projects showcasing Infineon's products and developed a few Code Examples.
-          - I also worked on automating Infineon's regulatory flow which reduced the turnaround time from a few weeks to a few hours. 
-
-      - job: "Co-Op Bachelor"
-        company: "Cypress Semiconductor"
-        companyUrl: "https://www.infineon.com/"
-        date: "Jan 2019 - May 2019"
-        info:
-          enable: true
-          content : Six-month intership program
-        featuredLink:
-          enable: false
-          url: "https://example.com"
-        content: |
-          I learned some basics about Bluetooth and a few Bluetooth protocols.
+          - I also worked on developing projects showcasing Infineon's products and developed a few Code examples.
+          - I also worked on automating Infineon's regulatory flow which reduced the turnaround time from a few weeks to a few hours.
+          - I did a few community trainings. Two of them are linked here. [one](https://community.infineon.com/t5/Resource-Library/Introduction-to-Infineon-s-WiFi-Regulatory-flow/ta-p/277083) [two](https://www.youtube.com/watch?v=KrfezF2BD70&t=2s) 
 
       # - job: "UI/UX Designer"
       #   company: "Netflix"
